gitops/clusters/amq1/namespace-amq.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: amq-multicluster-amq
  annotations:
    argocd.argoproj.io/sync-wave: "-30"
