gitops/clusters/amq1/namespace-analytics.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: amq-multicluster-analytics
  annotations:
    argocd.argoproj.io/sync-wave: "-30"
