gitops/clusters/amq1/namespace-edge.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: amq-multicluster-edge
  annotations:
    argocd.argoproj.io/sync-wave: "40"
