gitops/clusters/amq1/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: amq-multicluster
  annotations:
    argocd.argoproj.io/sync-wave: "-30"
