gitops/clusters/amq1/mqtt-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amq-amq1-mqtt-lb
  namespace: amq-multicluster-amq
  annotations:
    argocd.argoproj.io/sync-wave: "11"
spec:
  selector:
    ActiveMQArtemis: amq-amq1
  ports:
    - name: mqtt
      port: 1883
      targetPort: 1883
