gitops/clusters/amq1/mqtts-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amq-amq1-mqtts-lb
  namespace: amq-multicluster-amq
  annotations:
    argocd.argoproj.io/sync-wave: "11"
spec:
  selector:
    ActiveMQArtemis: amq-amq1
  ports:
    - name: mqtts
      port: 8883
      targetPort: 8883
