gitops/clusters/amq1/apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-consumer
  namespace: amq-multicluster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-consumer
  template:
    metadata:
      labels:
        app: event-consumer
    spec:
      containers:
        - name: app
          image: image-registry.openshift-image-registry.svc:5000/amq-multicluster/event-consumer:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: event-consumer
  namespace: amq-multicluster
spec:
  selector:
    app: event-consumer
  ports:
    - name: http
      port: 8081
      targetPort: 8081
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: event-consumer
  namespace: amq-multicluster
spec:
  to:
    kind: Service
    name: event-consumer
  port:
    targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: device-simulator
  namespace: amq-multicluster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: device-simulator
  template:
    metadata:
      labels:
        app: device-simulator
    spec:
      volumes:
        - name: mqtt-tls
          secret:
            secretName: amq-tls-mqtt
      containers:
        - name: app
          image: image-registry.openshift-image-registry.svc:5000/amq-multicluster/device-simulator:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: mqtt-tls
              mountPath: /etc/mqtt
              readOnly: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visualizer
  namespace: amq-multicluster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: visualizer
  template:
    metadata:
      labels:
        app: visualizer
    spec:
      containers:
        - name: app
          image: image-registry.openshift-image-registry.svc:5000/amq-multicluster/visualizer:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: visualizer
  namespace: amq-multicluster
spec:
  selector:
    app: visualizer
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: visualizer
  namespace: amq-multicluster
spec:
  to:
    kind: Service
    name: visualizer
  port:
    targetPort: http
