gitops/clusters/amq1/edge-haproxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onprem-mqtt-haproxy
  namespace: amq-multicluster-edge
  annotations:
    argocd.argoproj.io/sync-wave: "42"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: onprem-mqtt-haproxy
  template:
    metadata:
      labels:
        app: onprem-mqtt-haproxy
    spec:
      containers:
        - name: haproxy
          image: quay.io/haproxytech/haproxy-alpine:2.9
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8883
              name: mqtts
          volumeMounts:
            - name: cfg
              mountPath: /usr/local/etc/haproxy/haproxy.cfg
              subPath: haproxy.cfg
      volumes:
        - name: cfg
          configMap:
            name: onprem-mqtt-haproxy

---
apiVersion: v1
kind: Service
metadata:
  name: onprem-mqtt-haproxy
  namespace: amq-multicluster-edge
  annotations:
    argocd.argoproj.io/sync-wave: "42"
spec:
  selector:
    app: onprem-mqtt-haproxy
  ports:
    - name: mqtts
      port: 8883
      targetPort: mqtts

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: onprem-mqtt
  namespace: amq-multicluster-edge
  annotations:
    argocd.argoproj.io/sync-wave: "43"
spec:
  to:
    kind: Service
    name: onprem-mqtt-haproxy
  port:
    targetPort: mqtts
  tls:
    termination: passthrough
